--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": "^7.1.*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.3@dev"
     }
