Changing package stability

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "SevenD\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "7.1.*"
     },
