--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0"
+        "php": "^7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3@dev"
